--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
-pywin32==303
+pywin32
 pywinpty==2.0.5
 pyzmq==22.3.0
 requests==2.27.1
